kustomize/base/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: 0.8.25
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 5
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.25
        name: hello-http
        ports:
        - name: hello
          containerPort: 80
        resources: 
          limits:
            cpu: 10m
