kustomize/base/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: hello
  selector:
    app: hello
status:
  loadBalancer: {}
